<resources>
    <string name="app_name">ServiceFirst</string>
    <string name="title_activity_incident_view">IncidentView</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="companyname">Company Nam</string>
    <string name="serialnunmber">Serial Number </string>
    <string name="callorgin">Call Origin</string>
    <string name="serviceclasification">Service Classification</string>
    <string name="sbu">SBU</string>
    <string name="servicecategory">Service Category</string>
    <string name="bu">BU</string>
    <string name="servicesubcategory">Service Sub Category</string>
    <string name="subbu">Sub B:</string>
    <string name="problemcategory">Problem Category</string>
    <string name="problemdescription">Problem Description</string>
    <string name="priority">Priority</string>
    <string name="remarks">Remarks</string>
    <string name="serviceprovider">Service Provider</string>
    <string name="solution">Solution</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_visit_travel">Map</string>
    <string name="title_activity_call_updation">CallUpdation</string>
    <string name="Checkin">Check In</string>
    <string name="Checkout">Check Out</string>
    <string name="VisitUpdate">Visit Information</string>
    <string name="findingatsite">Finding at Site</string>
    <string name="ActionTaken">Action Taken</string>
    <string name="attachment">Select Slip to Upload</string>
    <string name="Spare">Spare Information</string>
    <string name="title_activity_visit_view">VisitView</string>
    <string name="callslipno">Call Slip No</string>
    <string name="nextvisitdate">Next Visit Date</string>
    <string name="observation">Observation</string>
    <string name="cutoffdate">Cut Off Date</string>
    <string name="CreatedBy">Created by</string>
    <string name="LastModifiedby">LastModified by</string>
    <string name="Createdat">Created at</string>
    <string name="Rs">\u20B9</string>
    <string name="LastModifiedat">LastModified at</string>
    <string name="completed">IsCompleted</string>
    <string name="status">Visit Status:</string>
    <string name="text_with_bullet">\u2022</string>
    <string name="pending_status">Pending Classification</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_vehicle_registration">VehicleRegistration</string>
    <string name="registration">Registration Number</string>
    <string name="VehicleDetails">Vehicle Details</string>
    <string name="LicenseDetail">License Details</string>
    <string name="Lic_no">License Number</string>
    <string name="Lic_type">License Type</string>
    <string name="Lic_date">License Expiry Date</string>
    <string name="insurance_expdate">Insurance Expiry Date</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_registration_view">RegistrationView</string>
    <string name="title_activity_dashboard">Dashboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="insurance_details">Insurance Details</string>
    <string name="logout">Logout</string>
    <string name="title_activity_spare_request">SpareRequest</string>
    <string name="Partno">Part No</string>
    <string name="quantity">Quantity</string>
    <string name="advance_return">Advance Return</string>
    <string name="partreq">Part Request Information</string>
    <string name="part_req">Part Request</string>
    <string name="Spare_issue">Spare Issue Information</string>
    <string name="samepart">Same Part</string>
    <string name="defect">Defective Serial No</string>
    <string name="Customer">Customer</string>
    <string name="CustomerCode">Customer Code</string>
    <string name="Address">Address</string>
    <string name="ContactName">Contact Name</string>
    <string name="Designation">Designation</string>
    <string name="EmailID">Email ID</string>
    <string name="PhoneNo">Phone Number</string>
    <string name="ContractCode">Contract Code</string>
    <string name="startdate">Start Date</string>
    <string name="enddate">End Date</string>
    <string name="assetin">Asset In</string>
    <string name="contractstartdate">Contract Start Date</string>
    <string name="contractstatus">Contract Status</string>
    <string name="accountmanager">Account Manager</string>
    <string name="contractenddate">Contract End Date</string>
    <string name="periodtype">Period Type</string>
    <string name="Baseconfig">Base Configuration</string>
    <string name="partstatus">Part Status</string>
    <string name="issue">Issued</string>
    <string name="visitstatus">Visit Status</string>
    <string name="pendingclassification">Pending Classification</string>
    <string name="slip">Slip</string>
    <string name="resources">Resource(s)</string>
    <string name="resourcedetails">Resource Details</string>
    <string name="name">Employee</string>
    <string name="assigneddate">Assigned Date Time</string>
    <string name="telephone">Telephone</string>
    <string name="Instruction">Instruction</string>
    <string name="Claim">Claim Information</string>
    <string name="transportmode">Transport Mode</string>
    <string name="amount">Amount</string>
    <string name="title_activity_travel_view">TravelView</string>
    <string name="kilometer">Kilometer</string>
    <string name="uploadinstallationnote">Upload Installation Note</string>
    <string name="DateFormat">Date Format</string>
    <string name="inote_attachment">Select File to Upload</string>
    <string name="Attendence">Attendence</string>
    <string name="title_activity_attendence">Attendence</string>
    <string name="local_vendor">Local Vendor Repair Occurred</string>
    <string name="title_activity_local_vendor">LocalVendor</string>
    <string name="vendorinvoice">Vendor Invoice</string>
    <string name="Invoicenumber">Invoice Number</string>
    <string name="SpareCharge">Spare Charge</string>
    <string name="attach_invoice">Attach Invoice</string>
    <string name="InvoiceDate">Invoice Date</string>
    <string name="vist">Visit(s)</string>
    <string name="employeecode">Employee  Code</string>
    <string name="date">Date</string>
    <string name="from_loc">From Location *</string>
    <string name="to_loc">To Location *</string>
    <string name="from_date">From Date *</string>
    <string name="to_date">To Date *</string>
    <string name="conveyence">Conveyance</string>
    <string name="lodge">Lodge</string>
    <string name="meals">Meals</string>
    <string name="entertainment">Entertainment</string>
    <string name="others">Others</string>
    <string name="ticket">Ticket</string>
    <string name="GeneralClaim">GeneralClaim</string>
    <string name="title_activity_general_claim_view">GeneralClaimView</string>
    <string name="attachment_">Attachment</string>
    <string name="total">Total</string>
    <string name="resourcename">Resource Name</string>
    <string name="sparecost">Spare Cost</string>
    <string name="title_activity_travel_edit">TravelEdit</string>
    <string name="vehicletype">Vehicle Type</string>
    <string name="title_activity_map_serial_number">Map Serial Number</string>
    <string name="shiptoserialnumber">Ship-To Serial Number</string>
    <string name="title_activity_asset_transfer">AssetTransfer</string>
    <string name="ic_folder">folde</string>
    <string name="ic_keyboard_arrow_down">key</string>
    <string name="ic_keyboard_arrow_right">keyright</string>
    <string name="ic_sd_storage">storage</string>
    <string name="service_charge">Service Charge</string>
</resources>
