<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        style="@style/card"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:id="@+id/root"
            style="@style/card_inner">

            <TextView
                android:id="@+id/partreqinfo"
                style="@style/cardheader"
                android:text="Part Request Information" />

            <View
                android:id="@+id/partreqinfoview"
                style="@style/list_header_view"
                android:layout_below="@+id/partreqinfo" />



            <TextView
                android:id="@+id/partnotext"
                style="@style/list_item_caption"
                android:layout_below="@+id/partreqinfoview"
                 android:text="@string/Partno" />

            <TextView
                android:id="@+id/partno"
                style="@style/list_item_text"
                android:layout_below="@+id/partnotext" />

            <View
                android:id="@+id/partnoview"
                style="@style/list_item_view"
                android:layout_below="@+id/partno" />

            <TextView
                android:id="@+id/advancereturntext"
                style="@style/list_item_caption"
                android:layout_below="@+id/partnoview"
                android:text="@string/advance_return" />

            <TextView
                android:id="@+id/advancereturn"
                style="@style/list_item_text"
                android:layout_below="@+id/advancereturntext" />

            <View
                android:id="@+id/advancereturnview"
                style="@style/list_item_view"
                android:layout_below="@+id/advancereturn" />

            <TextView
                android:id="@+id/sameparttext"
                style="@style/list_item_caption"
                android:layout_below="@+id/advancereturnview"
                android:text="@string/samepart" />

            <TextView
                android:id="@+id/samepart"
                style="@style/list_item_text"
                android:layout_below="@+id/sameparttext" />

            <View
                android:id="@+id/sameview"
                style="@style/list_item_view"
                android:layout_below="@+id/samepart" />

            <TextView
                android:id="@+id/partstatustext"
                style="@style/list_item_caption"
                android:layout_below="@+id/sameview"
                android:text="@string/partstatus" />

            <TextView
                android:id="@+id/partstatus"
                style="@style/list_item_text"
                android:layout_below="@+id/partstatustext" />

            <View
                android:id="@+id/partstatusview"
                style="@style/list_item_view"
                android:layout_below="@+id/partstatus" />

            <TextView
                android:id="@+id/issuedtext"
                style="@style/list_item_caption"
                android:layout_below="@+id/partstatusview"
                android:text="@string/issue" />

            <TextView
                android:id="@+id/issueapproval"
                style="@style/list_item_text"
                android:layout_below="@+id/issuedtext" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>